--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,9 @@
 
 html {
   background-color: #f9f9f9;
+  position: relative;
+  min-height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -25,4 +28,33 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+footer {
+  background-color: #24292e;
+  padding: 5px 5px 0 5px;
+  text-align: center;
+  left: 0;
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+}
+
+footer p {
+  color: white;
+  margin: 10px;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover {
+  /* color: white; */
+  opacity: 0.7;
+}
+
+footer img:hover {
+  opacity: 0.7;
 }
